@@ -7,8 +7,6 @@ export(distReduction)
 export(maTrex)
 export(quietTCRgenes)
 export(runTrex)
-importFrom(BiocParallel,MulticoreParam)
-importFrom(BiocParallel,bplapply)
 importFrom(Matrix,sparse.model.matrix)
 importFrom(SeuratObject,CreateDimReducObject)
 importFrom(SeuratObject,CreateSeuratObject)
